# homepage

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  PROJECT_MAP.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  manage.py  nginx.conf  package-lock.json  package.json  populate_blog.py  pyproject.toml  requirements.txt  rollback.sh  setup_hetzner.sh  setup_swap.sh  update_deps.py
.github/workflows/: deploy.yml  lint.yml  main.yml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/management/commands/: __init__.py  populate_blog.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_post_slug_post_status_and_more.py
blog/templates/blog/: admin_post_list.html  detail.html  index.html  post_base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/partials/: post_list_items.html
blog/templatetags/: markdown_extras.py
config/: asgi.py  celery.py  settings.py  urls.py  ws_routing.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
core/: consumers.py  context_processors.py  tasks.py  tests.py  urls.py  views.py
core/services/: github_service.py  request_lifecycle.py  system_metrics.py
core/templates/: base.html
core/templates/core/: about.html  api_playground.html  architecture.html  base.html  dashboard.html  home.html  visitor_map.html
core/templates/core/partials/: github_stats.html
core/templates/drf_spectacular/: swagger_ui.html
core/templates/registration/: logged_out.html  login.html
dashboard/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
dashboard/management/: __init__.py
dashboard/management/commands/: backfill_prices.py  backfill_spot_prices.py  poll_spot_prices.py
dashboard/migrations/: 0001_initial.py  0002_create_hypertable.py  0003_add_price_area_and_surrogate_pk.py  0003_timescaledb_compression_and_hourly_aggregate.py  0004_timescaledb_compression_and_hierarchical_aggregates.py  0005_spotpricedaily_spotpricehourly_spotpricemonthly_and_more.py
dashboard/services/: __init__.py  current_price.py  energinet.py  price_chart.py
dashboard/templates/dashboard/: index.html
dashboard/templates/dashboard/partials/: chart_data.html  hero_card.html
home/: urls.py  views.py
home/static/css/: dark-theme.css
home/templates/allauth/account/: login.html
home/templates/allauth/elements/: button.html  fields.html
home/templates/allauth/layouts/: base.html
home/templates/home/: about.html  base.html  home.html
homepage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nginx/: homepage.conf  nginx.conf  rate-limit.conf
ops/: .env.example  Dockerfile  Makefile  docker-compose.production.yml  docker-compose.yml  homepage_backup  manage  nginx.conf  pyproject.toml
ops/.run/: Compose.run.xml
project/: asgi.py  settings.py  urls.py  wsgi.py
project/static/css/: dark-theme.css  project.css  project.css.map
project/static/sass/: project.sass
showcase/: __init__.py  urls.py  views.py
showcase/services/: __init__.py  algorithms.py  content.py
static/css/: animations.css  base.css  components.css  design-system.css  layout.css  style.css  tailwind.css  tailwind.src.css  variables.css
static/js/: request-lifecycle.js
visitors/: __init__.py  admin.py  apps.py  middleware.py  models.py  tasks.py  tests.py
visitors/migrations/: 0001_initial.py  __init__.py
visitors/services/: __init__.py  geoip.py
