[project]
name = "homepage"
version = "1.0.0"
description = "Personal homepage built with Django"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.11",
    "python-decouple>=3.8",
    "markdown>=3.10",
    "sentry-sdk>=2.47",
    "django-debug-toolbar>=6.1",
    "httpx>=0.28",
    "djangorestframework>=3.16",
    "drf-spectacular>=0.29",
    "psutil>=7.1",
    "whitenoise>=6.8",
    "django-health-check>=3.18",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    "pre-commit>=4.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "blog", "showcase", "config"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["migrations", "venv", ".venv"]

[tool.django-stubs]
django_settings_module = "config.settings.development"


