[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Mikkel Kofoed <mikkel.kofoed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
pendulum = "^2.1.2"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.4.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
