[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Mikkel Kofoed <mikkel.kofoed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
pendulum = "^3.0.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"
ipython = "^8.20.0"
django-markdownx = "4.0.7"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
