[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Mikkel Kofoed <mikkel.kofoed@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.11"
pendulum = "^3.0.0"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"
whitenoise = "^6.7.0"
ipython = "^8.25.0"
django-markdownx = "4.0.7"
psycopg2-binary = "^2.9.9"
django-allauth = "^0.63.3"
sentry-sdk = {extras = ["django"], version = "^2.8.0"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
